@@ -114,7 +114,7 @@ For more on this case, please consult the [dedicated reference](https://docs.dat
 AstraPy's abstractions for working at the data and admin layers are structured
 as depicted by this diagram:
 
-![AstraPy, abstractions chart](https://raw.githubusercontent.com/datastax/astrapy/master/pictures/astrapy_abstractions.png)
+![AstraPy, abstractions chart](https://raw.githubusercontent.com/datastax/astrapy/main/pictures/astrapy_abstractions.png)
 
 Here's a small admin-oriented example:
 
@@ -144,7 +144,7 @@ my_database_admin.create_keyspace("my_dreamspace")
 
 The package comes with its own set of exceptions, arranged in this hierarchy:
 
-![AstraPy, exception hierarchy](https://raw.githubusercontent.com/datastax/astrapy/master/pictures/astrapy_exceptions.png)
+![AstraPy, exception hierarchy](https://raw.githubusercontent.com/datastax/astrapy/main/pictures/astrapy_exceptions.png)
 
 For more information, and code examples, check out the docstrings and consult
 the API reference linked above.
